--- a/miniprogram/pages/detail/detail.wxss
+++ b/miniprogram/pages/detail/detail.wxss
@@ -1,6 +1,8 @@
 /* detail.wxss */
 .page {
   /* 页面样式 */
+  display: grid;
+  grid-template-rows: 1fr 100rpx 1fr;
 }
 
 .images {
@@ -35,6 +37,7 @@
   /* 菜谱 */
   background-color: #f9f9f9; /* 统一浅色背景 */
   flex: 1;
+  line-height: 80rpx;
 }
 
 .ingredients {
@@ -45,10 +48,22 @@
 
 .ingredient-item {
   /* 单个材料样式 */
-  background-color: #f9f9f9; /* 统一浅色背景 */
+  background-color: orange; /* 将背景颜色设置为橙色 */
+  border-radius: 10px; /* 添加圆角（椭圆形） */
+  padding: 10px; /* 添加一些内边距以增加间距 */
+  margin: 0 20px; /* 添加左右边距以留白 */
+  display: flex; /* 使用 flexbox 进行对齐 */
+  justify-content: space-between; /* 均匀分布内容 */
+  margin-bottom: 20rpx;
+}
+
+.ingredient-item text {
+  flex: 1; /* Allow text to take up equal space */
+  line-height: 30rpx;
 }
 
 .method {
   /* 做法 */
   background-color: #f9f9f9; /* 统一浅色背景 */
+  line-height: 80rpx;
 }
