--- a/miniprogram/pages/mine/mine.wxml
+++ b/miniprogram/pages/mine/mine.wxml
@@ -13,5 +13,10 @@
     <button class="edit-btn" bindtap="gotoEditUserInfo">编辑按钮</button>
   </view>
 
-  <!-- 其他页面内容 -->
+   <!-- 食谱 / 喜欢 -->
+   <view class="tab">
+    <view class="text1" bindtap="selectTab" data-tab="recipe"> <text>食谱</text> </view>
+    <view class="text2" bindtap="selectTab" data-tab="ingredients"> <text>食谱</text> </view>
+  </view>
+  
 </view>
