--- a/miniprogram/pages/mine/mine.wxss
+++ b/miniprogram/pages/mine/mine.wxss
@@ -62,3 +62,25 @@
   text-align: center;
   font-size: 24rpx;
 }
+
+.tab {
+  /* 切换菜谱、材料、做法的样式 */
+  background-color: #fff;
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.tab .text1,
+.tab .text2 {
+  flex: 1;
+  text-align: center;
+  cursor: pointer;
+  transition: color 0.3s; /* 添加颜色过渡效果 */
+}
+
+.tab .text1:hover,
+.tab .text2:hover {
+  color: orange; /* 点击后文字变成橙色 */
+}
