--- a/miniprogram/pages/mine/mine.wxss
+++ b/miniprogram/pages/mine/mine.wxss
@@ -1,86 +1,72 @@
-/* pages/mine/mine.wxss */
+/* mine.wxss */
+
 .page {
-  /* 页面样式 */
+  padding: 20rpx; /* 页面留白 */
 }
 
 .user-info {
+  padding: 12px 0;
   display: flex;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  padding: 20rpx;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  height: 400rpx; /* 背景图片高度增加 */
 }
 
 .user-avatar-container {
-  width: 100rpx;
-  height: 100rpx;
-  border-radius: 50%;
-  overflow: hidden;
-  border: 2px solid #fff;
-  margin-right: 20rpx; /* 调整右边距 */
+  flex: 1; /* 设置为相等的高度 */
+  width: 33.33333vw;
+  height: 23.33333vw;
+  margin-right: 20rpx; /* 右侧留出一定的间距 */
 }
 
 .user-avatar {
+  border-radius: 50%;
   width: 100%;
   height: 100%;
+  object-fit: cover;
 }
 
 .user-details {
-  flex-grow: 1;
+  flex: 2; /* 设置为相等的高度 */
   display: flex;
   flex-direction: column;
 }
 
 .user-name {
-  font-size: 28rpx; /* 调整字体大小 */
-  font-weight: bold; /* 加粗 */
-  color: #333;
-  margin-bottom: 5rpx; /* 调整间距 */
-  white-space: nowrap; /* 防止换行 */
-  overflow: hidden; /* 隐藏溢出部分 */
-  text-overflow: ellipsis; /* 显示省略号 */
-}
-
-.user-description,
-.user-count {
-  font-size: 24rpx; /* 字体大小一致 */
-  color: #666;
-  margin-bottom: 10rpx;
-  white-space: normal; /* 换行显示 */
+  font-size: 36rpx; /* 用户名字体大小 */
+  font-weight: bold; /* 用户名字体加粗 */
+  margin-bottom: 10rpx; /* 用户名与个人描述之间的间距 */
 }
 
 .edit-btn {
-  width: auto;
-  min-width: 100rpx;
-  height: 60rpx;
-  line-height: 60rpx;
-  border-radius: 30rpx;
-  background-color: #ff7f50;
-  text-align: center;
+  width: 50px;
+  height: 36rpx;
+  background-color: #ff4639;
+  color: #fff;
+  line-height: 36rpx;
   font-size: 24rpx;
+  font-weight: bold;
+  border-radius: 18rpx; /* 圆角按钮 */
+}
+
+.user-description {
+  font-size: 24rpx; /* 个人描述字体大小 */
+  line-height: 140%; /* 行高 */
+  margin-bottom: 10rpx; /* 个人描述与菜品粉丝数量之间的间距 */
+}
+
+.user-menuCount,
+.user-fansCount {
+  font-size: 24rpx; /* 字体大小 */
 }
 
 .tab {
-  /* 切换菜谱、材料、做法的样式 */
-  background-color: #fff;
   display: flex;
-  justify-content: space-between;
-  padding: 10px;
-  border-radius: 5px;
+  justify-content: space-around;
+  margin-top: 20rpx; /* 选项卡与用户信息之间的间距 */
 }
 
-.tab .text1,
-.tab .text2 {
-  flex: 1;
-  text-align: center;
-  cursor: pointer;
-  transition: color 0.3s; /* 添加颜色过渡效果 */
-}
-
-.tab .text1:hover,
-.tab .text2:hover {
-  color: orange; /* 点击后文字变成橙色 */
+.text1,
+.text2 {
+  font-size: 26rpx; /* 选项卡文字大小 */
+  padding: 10rpx 20rpx; /* 选项卡内边距 */
 }
