--- a/miniprogram/pages/mine/mine.wxml
+++ b/miniprogram/pages/mine/mine.wxml
@@ -3,7 +3,7 @@
   <!-- 顶部用户信息展示 -->
   <view class="user-info" style="background-image: url('{{backgroundImage}}')">
     <view class="user-avatar-container">
-      <image class="user-avatar" src="{{userAvatar}}" mode="scaleToFill"></image>
+      <image class="user-avatar" src="{{userAvatar}}" mode=""></image>
     </view>
     <view class="user-details">
       <text class="user-name">{{userName}}</text>
@@ -14,10 +14,22 @@
     </view>
   </view>
 
-   <!-- 食谱 / 喜欢 -->
+   <!-- 食谱 / 喜欢 导航 -->
    <view class="tab">
-    <view class="text1" bindtap="selectTab" data-tab="recipe"> <text>食谱</text> </view>
-    <view class="text2" bindtap="selectTab" data-tab="ingredients"> <text>食谱</text> </view>
+    <view class="text1" bindtap="selectTab" data-tab="dishes"> <text>食谱</text> </view>
+    <view class="text2" bindtap="selectTab" data-tab="likes"> <text>喜欢</text> </view>
   </view>
+
+  <!-- 食谱 -->
+  <view class="dishes" wx:if="{{selectedTab === 'dishes'}}">
+    <!-- 菜品信息展示 -->
+    
+  </view>
+
+
+  <!-- 喜欢 -->
+  <view class="likes" wx:if="{{selectedTab === 'likes'}}">
+
+</view>
   
 </view>
